tests/errors/test-data-member-auto.script

class A { auto x; };

//>2:16: error C23: data members cannot be declared 'auto'.
